// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apollo-helper 1 query: 1 query 1`] = `

import autoInjectGql from "../macro";
import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export const query = gql\`
  query queryDemo {
    a {
      b
    }
  }
\`;
export default autoInjectGql(App);

      ↓ ↓ ↓ ↓ ↓ ↓

import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export default graphql(
  gql\`
    query queryDemo {
      a {
        b
      }
    }
  \`,
  {
    name: 'query'
  }
)(App);


`;

exports[`apollo-helper 2 query: 2 query 1`] = `

import autoInjectGql from "../macro";
import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export const query1 = gql\`
  query queryDemo1 {
    a {
      b
    }
  }
\`;
export const query2 = gql\`
  query queryDemo2 {
    c {
      d
    }
  }
\`;
export default autoInjectGql(App);

      ↓ ↓ ↓ ↓ ↓ ↓

import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export default compose(
  graphql(
    gql\`
      query queryDemo1 {
        a {
          b
        }
      }
    \`,
    {
      name: 'query1'
    }
  ),
  graphql(
    gql\`
      query queryDemo2 {
        c {
          d
        }
      }
    \`,
    {
      name: 'query2'
    }
  )
)(App);


`;

exports[`apollo-helper inline: inline 1`] = `

import autoInjectGql from "../macro";
import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = autoInjectGql(props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
});

export const query = gql\`
  query queryDemo {
    a {
      b
    }
  }
\`;
export default App;

      ↓ ↓ ↓ ↓ ↓ ↓

import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';
const App = graphql(
  gql\`
    query queryDemo {
      a {
        b
      }
    }
  \`,
  {
    name: 'query'
  }
)(props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
});
export default App;


`;

exports[`apollo-helper override config.name: override config.name 1`] = `

import autoInjectGql from "../macro";
import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export const query = [gql\`
  query queryDemo {
    a {
      b
    }
  }
\`, { name: "customName" }];
export default autoInjectGql(App);

      ↓ ↓ ↓ ↓ ↓ ↓

import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export default graphql(
  gql\`
    query queryDemo {
      a {
        b
      }
    }
  \`,
  {
    name: 'customName'
  }
)(App);


`;

exports[`apollo-helper with config: with config 1`] = `

import autoInjectGql from "../macro";
import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export const query = [gql\`
  query queryDemo {
    a {
      b
    }
  }
\`, { a: 1, b: 2}];
export default autoInjectGql(App);

      ↓ ↓ ↓ ↓ ↓ ↓

import { graphql } from '@apollo/react-hoc';
import compose from 'lodash/flowRight';

const App = props => {
  return (
    <div>
      <span>1</span>
    </div>
  );
};

export default graphql(
  gql\`
    query queryDemo {
      a {
        b
      }
    }
  \`,
  {
    name: 'query',
    a: 1,
    b: 2
  }
)(App);


`;
